[project]
name = "pulse-agent"
version = "0.2.3"
description = "Autonomous cognition engine for OpenClaw agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Iris", email = "iris@iamiris.ai"},
    {name = "Josh"},
]
keywords = ["openclaw", "ai", "agent", "consciousness", "autonomous", "nervous-system", "emotions", "memory"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
pulse = "pulse.src.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"pulse.src" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
